--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -13,15 +13,11 @@
                             <li>
                                 <a href="../staff">Home </a>
                             </li>              
-
                             <li>
-                                <a href="../staff/submit">Submit File</a>
+                                <a href="../staff/allFileSubmit">Submit File</a>
                             </li>    
                             <li>
                                 <a href="../staff/viewAll">View Submitted File</a>
-                            </li>
-                            <li>
-                                <a href="../staff/allFileSubmit">Test</a>
                             </li>
                             <li>
                                 <a href="../">Logout</a>
