--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -51,7 +51,7 @@
                         </tr>
                         <tr> 
                             <td><input type="checkbox" name="checkbox" value="check" id="agree" /></td>
-                            <td><label> I have read and agree to the Terms and Conditions and Privacy Policy</label></td>
+                            <td><label> I have read and agree to the <a href="">Terms and Conditions and Privacy Policy</a></label></td>
                         </tr>
                         <tr>
                             <td></td>
