update test submit between date

--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -38,6 +38,10 @@
                             </li>  
 
                             <li>
+                                <a href="../admin/duyanhTest">DuyAnhTest</a>
+                            </li>  
+
+                            <li>
                                 <a href="../">Logout</a>
                             </li>              
                         </ul>
