--- a/views/admin/closureDate.hbs
+++ b/views/admin/closureDate.hbs
@@ -42,7 +42,7 @@
                                 <td></td>
                                 <td><input type="submit" value="Add" class="insertButton"></td>
                             </tr>
-                            <td style="width:40%; font-size:12px; color: rgb(32, 193, 59); ">{{implementSuccess}}</td>
+                            <td style="width:40%; font-size:12px; color: rgb(32, 193, 59); ">{{message}}</td>
 
                         </form>
                     </table>
