--- a/views/partial/headerAdmin.hbs
+++ b/views/partial/headerAdmin.hbs
@@ -36,9 +36,12 @@
                             <li>
                                 <a href="../admin/viewPopularIdeas">View Ideas</a>
                             </li>  
+                            <li>
+                                <a href="../admin/TESTpostIdeaManagement">Test PAGINATION </a>
+                            </li>  
 
                             <li>
-                                <a href="../admin/duyanhTest">DuyAnhTest</a>
+                                <a href="../admin/duyanhTest">DuyAnhTest CHo Manh</a>
                             </li>  
 
                             <li>
