--- a/views/admin/availableUsers.hbs
+++ b/views/admin/availableUsers.hbs
@@ -72,7 +72,31 @@
                 </table>
             </div>
 
-            <div class="center_option_testPaging">
+            <div class="showButtonPaging">
+                
+                    <a href="../admin/choosePageUser?skipData=0" style="margin-left:10px">
+                        <button>
+                            <<
+                        </button>
+                    </a>
+            
+
+                    {{#each viewNumPage as |val key|}}
+                        <a href="../admin/choosePageUser?skipData={{key}}">
+                            <button>
+                                {{val}}
+                            </button>
+                        </a>
+
+                    {{/each}}
+
+                    
+                    <a href="../admin/choosePageUser?skipData={{lastPage}}">
+                        <button>
+                            >>
+                        </button>
+                    </a> 
+{{!-- 
                 <div class="choosePageFirst">
                     <a href="../admin/choosePageUser?skipData=0">
                         <button>
@@ -99,7 +123,7 @@
                             >>
                         </button>
                     </a>
-                </div>
+                </div> --}}
             </div>
 
         </div>
