--- a/views/admin/postIdeaManagementTEST.hbs
+++ b/views/admin/postIdeaManagementTEST.hbs
@@ -16,7 +16,12 @@
         <!-- Content -->
         <div class="main_Content">
             <div class="table_title_idea">
-                <h2>Test Pagination ( Post Idea Management )</h2>
+                <h2>Post Idea Management</h2>
+            </div>
+
+            <div class="show_closureDate">
+                    <p>( Start Date : {{startDate}} )</p>
+                    <p>( End Date : {{endDate}} )</p>
             </div>
 
             <div class="ideaManagement">
@@ -25,13 +30,8 @@
                             <tr>
                                     <th>Topic</th>
                                     <th>Description</th>
-                                    {{!-- <th>Start Date</th>
-                                    <th>End Date</th> --}}
                                     <th>Categories</th>
-                                    {{!-- <th>User</th> --}}
                                     <th>Email</th>
-
-                                    {{!-- <th></th> --}}
                             </tr>
                         </thead>
                         <tbody>
@@ -39,22 +39,8 @@
                                 <tr>
                                     <td>{{topic}}</td>
                                     <td>{{description}}</td>
-                                    {{!-- <td>{{startDate}}</td>
-                                    <td>{{endDate}}</td> --}}
                                     <td>{{category}}</td>
-                                    {{!-- <td>{{users}}</td> --}}
                                     <td>{{email}}</td>
-                                
-                                    {{!-- <td>
-                                        <button>
-                                            <a href="../admin/updatePostIdea?id={{_id}}">
-                                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Edit_icon_%28the_Noun_Project_30184%29.svg/1024px-Edit_icon_%28the_Noun_Project_30184%29.svg.png"
-                                                width="18" height="18" alt="">
-                                                Update
-                                            </a>
-                                        </button>
-                                    </td> --}}
-                                
                                 </tr>
                             {{/each }}
                     </tbody>
@@ -62,60 +48,43 @@
             </div>
 
             <div class="showButtonPaging">
-                    <a href="../admin/TESTchoosePageIdea?skipData=0" style="margin-left:10px">
+                    
+                    <a href="../admin/TESTpostIdeaManagement" style="margin-left:10px">
                         <button>
                             <<
                         </button>
                     </a>
             
 
-                    {{#each viewNumPage as |val key|}}
-                        <a href="../admin/TESTchoosePageIdea?skipData={{key}}">
+                    {{#each left}}
+                        <a href="/admin/TESTpostIdeaManagement?page={{this}}">
                             <button>
-                                {{val}}
+                                {{this}}
                             </button>
                         </a>
 
                     {{/each}}
 
+                    <a href="/admin/TESTpostIdeaManagement?page={{currPage}}">
+                        <button class="active">
+                            {{currPage}}
+                        </button>
+                    </a>
+
+                    {{#each right}}
+                        <a href="/admin/TESTpostIdeaManagement?page={{this}}">
+                            <button>
+                                {{this}}
+                            </button>
+                        </a>
+                    {{/each}}
+
                     
-                    <a href="../admin/TESTchoosePageIdea?skipData={{lastPage}}">
+                    <a href="/admin/TESTpostIdeaManagement?page={{totalPages}}">
                         <button>
                             >>
                         </button>
                     </a> 
-
-
-                    {{!-- <div class="choosePageFirst">
-                        <a href="../admin/choosePageIdea?skipData=0">
-                            <button>
-                                <<
-                            </button>
-                        </a>
-                    </div>
-
-                    <div class="choosePage">
-                        <div class="choosePage_inside">
-                            {{#each viewNumPage as |val key|}}
-                                <a href="../admin/choosePageIdea?skipData={{key}}">
-                                    <button>
-                                            {{val}}
-                                    </button>
-                                </a>
-                            {{/each}}
-                        </div>
-                    </div>
-
-                    <div class="choosePageLast">
-                        <a href="../admin/choosePageIdea?skipData={{lastPage}}">
-                            <button>
-                                >>
-                            </button>
-                        </a>
-                    </div> 
-                    --}}
-
-            
             </div>
         </div>
 
