--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -179,7 +179,7 @@
                         const postId = input.value;
                         ajax.send("postId="+ postId);
                     }
-                    /*window.addEventListener('load', () => {
+                    window.addEventListener('load', () => {
                         const cmtForm = document.querySelectorAll('.comment-form');
                         cmtForm.forEach(form => {
                             form.addEventListener('submit', (event) => {
@@ -210,7 +210,7 @@
                                 ajax.send(JSON.stringify(json));
                             })
                         })
-                    })*/
+                    })
                 </script>
         </div>
 
