--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -27,6 +27,28 @@
                             <td name = "txtUserName"> {{getUser.name}}</td>
                         </tr>
                         <tr>
+                            <td class="accountManagement_title">Start Date : </td>
+                            <td name = "txtStartDate">
+                            <select name="txtStartDate">
+                                    <option>Select Date</option>
+                                    {{#each getDate}}
+                                        <option value="{{startDate}}">{{startDate}}</option>
+                                    {{/each}}
+                            </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="accountManagement_title">Start Date : </td>
+                            <td>
+                            <select name="txtEndDate">
+                                    <option>Select Date</option>
+                                    {{#each getDate}}
+                                        <option value="{{endDate}}">{{endDate}}</option>
+                                    {{/each}}
+                            </select>
+                            </td>
+                        </tr>
+                        <tr>
                             <td class="accountManagement_title">Topic : </td>
                             <td><input type="text" class="accountManagement" name="txtNewTopic"> </td> 
                         </tr>
@@ -55,10 +77,25 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td><input type="submit" value="Submit" class="insertButton" name="submit" onclick="if(!this.form.checkbox.checked){alert('You must agree to the terms first.');return false}"></td>
+                            <td><input type="submit" value="Submit" class="insertButton" name="submit" onclick="check()">
+                            </td>
                         </tr>
                     </form>
                 </table>
+                <script>
+                    function check(){
+                        startDate = startDate.split("-");
+                        var newDate1 = new Date( startDate[2], startDate[1] - 1, startDate[0]);
+                        endDate = endDate.split("-");
+                        var newDate2 = new Date( endDate[2], endDate[1] - 1, endDate[0]);
+                        if(!this.form.checkbox.checked)
+                            {alert('You must agree to the terms first.')}
+                        else if(newDate1.getTime()< Date.now()<newDate2.getTime()){
+                            alert('Time is out')
+                        }    
+                            return false;
+                    }
+                </script>
 
 
                 <div class="line_only"></div>
