--- a/views/admin/postIdeaManagementTEST.hbs
+++ b/views/admin/postIdeaManagementTEST.hbs
@@ -18,11 +18,11 @@
             <div class="table_title_idea">
                 <h2>Post Idea Management</h2>
             </div>
-
+{{!-- 
             <div class="show_closureDate">
                     <p>( Start Date : {{startDate}} )</p>
                     <p>( End Date : {{endDate}} )</p>
-            </div>
+            </div> --}}
 
             <div class="ideaManagement">
                 <table border="1" cellspacing ="0 " cellpadding="15">
