--- a/views/partial/headerManager.hbs
+++ b/views/partial/headerManager.hbs
@@ -17,6 +17,10 @@
                             <li>
                                 <a href="../manager/addCategory">Category Management</a>
                             </li>    
+                            
+                            <li>
+                                <a href="../manager/staticDashboard">Static Dashboard</a>
+                            </li>
 
                             <li>
                                 <a href="../">Logout</a>
