count Academic and support

--- a/views/manager/staticDashboard.hbs
+++ b/views/manager/staticDashboard.hbs
@@ -15,7 +15,29 @@
 
         <!-- Content -->
         <div class="main_Content">
-            
+            <div class="topViewPopular">
+                <div class="dropbox_show">
+                        <form  action="../manager/ChooseYearStatic" method="post">
+                            <select name="txtSelectedViewType" onchange="this.form.submit()">
+                                <option value="">Select</option>
+
+                                <option value="LatestIdeas">2019</option>
+
+                                <option value="LatestComments">2020</option>
+
+                                <option value="MostLikeAndDislike">2021</option>
+
+                                <option value="MostViewed">2022</option>
+
+                            </select>
+                        </form>
+                </div>
+            </div>
+
+            <div class="bottomViewPopular">
+                <span>Count Academy: {{countA}}</span>
+                <span>Count Support: {{countS}}</span>
+            </div>
 
 
 
