static count staff per year

--- a/views/manager/staticDashboard.hbs
+++ b/views/manager/staticDashboard.hbs
@@ -36,7 +36,13 @@
 
             <div class="bottomViewPopular">
                 <span>Count Academy: {{countA}}</span>
+                <br>
                 <span>Count Support: {{countS}}</span>
+                <br>
+                <span>Count Staff Academic: {{countStaffA}}</span>
+                <br>
+                <span>Count Staff Support: {{countStaffS}}</span>
+                <br>
             </div>
 
 
