--- a/views/manager/staticDashboard.hbs
+++ b/views/manager/staticDashboard.hbs
@@ -32,6 +32,16 @@
                             </select>
                         </form>
                 </div>
+                <div class="dropbox_show">
+                        <form  action="../manager/ChooseYearStatic" method="post">
+                            <select name="txtSelectedViewType" onchange="this.form.submit()">
+                                <option value="">Select</option>
+                                {{#each yearList}}
+                                <option value={{this}}>{{this}}</option>
+                                {{/each}}
+                            </select>
+                        </form>
+                </div>
             </div>
 
             <div class="bottomViewPopular">
