static dashboard back-end

--- a/views/manager/staticDashboard.hbs
+++ b/views/manager/staticDashboard.hbs
@@ -18,7 +18,7 @@
             <div class="topViewPopular">
                 <div class="dropbox_show">
                         <form  action="../manager/ChooseYearStatic" method="post">
-                            <select name="txtSelectedViewType" onchange="this.form.submit()">
+                            <select name="txtSelectedYear" onchange="this.form.submit()">
                                 <option value="">Select</option>
                                 {{#each yearList}}
                                 <option value={{this}}>{{this}}</option>
